<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">נגישות אקספרס</string>
    <string name="breif">כאן יבוא הסבר קצר בכמה שורות על מהות התכנה      כאן יבוא הסבר קצר בכמה שורות על מהות התכנה         כאן יבוא הסבר קצר בכמה שורות על מהות התכנה</string>
    <string name="app_name">Accessability</string>
    <string name="not_yet_title">בקרוב</string>
    <string name="not_yet">בגרסה הבאה</string>
    
    <string name="details">פרטי הסקר</string>
    <string name="survay_id_l">סקר מס\':</string>
    <string name="owner_name">:שם/בעלים</string>
    <string name="street_address">:כתובת</string>
    <string name="date">:תאריך</string>
    <string name="new_survey">סקר חדש</string>
    <string name="outomeLbl">תוצאה</string>
    <string name="firstAdaptLbl">התאמה ראשונה</string>
    <string name="secondAdaptLbl">התאמה שניה</string>
    <!-- <string name=""></string> -->

    <string name="instructionTitle">הנחיות</string>
    <string name="upload">הטען שאלות לטופס</string>
    <string name="uploading">טוען שאלות לטופס</string>
    <string name="fix_a">התאמה ראשונה</string>
    <string name="fix_b">:התאמה שניה</string>
    <string name="comments">:הערות</string>
    <string name="question_mark">- ? -</string>
    <string name="duplicate">הוסף</string>
    <string name="all_well">לא נדרשת התאמה</string>

    <!-- Survey details pop up window -->
    <string name="survey_main_label">הסקר:</string>
    <string name="survey_num">מספר הסקר:</string>
    <string name="surveyor_name">שם הסוקר:</string>
    <string name="surveyor_address">כתובת הסוקר:</string>
    
    <string name="owner_main_label">הבעלים:</string>
    <string name="owner_id_num">תז/חפ/תז עסקי:</string>
    <string name="owner_name_l">שם:</string>
    <string name="owner_phone">טלפון:</string>
    <string name="owner_addres">כתובת:</string>

    <string name="building_main_label">הבנין:</string>
    <string name="building_name">שם הבנין:</string>
    <string name="street_address_l">כתובת:</string>
    <string name="building_town">ישוב:</string>
    <string name="building_gush">גוש:</string>
    <string name="building_lot">חלקה:</string>
    <string name="building_sub_lot">תת חלקה:</string>
    
    
    <!-- Buttons -->
    <string name="cancell">בטל</string>
    <string name="send">המשך</string>

</resources>