<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Survey details -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/survey_main_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <!-- survey number -->

            <TableRow>

                <EditText
                    android:id="@+id/survayNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/survey_num"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <!-- surveyor name -->

            <TableRow>

                <EditText
                    android:id="@+id/survayorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/surveyor_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <!-- surveyor address -->

            <TableRow>

                <EditText
                    android:id="@+id/survayorAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/surveyor_address"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>
        <!-- Owner details -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/owner_main_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <!-- owner id number -->

            <TableRow>

                <EditText
                    android:id="@+id/ownerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/owner_id_num"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <!-- owner name -->

            <TableRow>

                <EditText
                    android:id="@+id/ownerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/owner_name_l"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <!-- owner phone number -->

            <TableRow>

                <EditText
                    android:id="@+id/ownerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/owner_phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <!-- owner address -->

            <TableRow>

                <EditText
                    android:id="@+id/ownerAddres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/owner_addres"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>

        <!-- Building details -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/building_main_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <!-- building name -->

            <TableRow>

                <EditText
                    android:id="@+id/buildingName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/building_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <!-- building address -->

            <TableRow>

                <EditText
                    android:id="@+id/streetAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/street_address_l"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <!-- building town -->

            <TableRow>

                <EditText
                    android:id="@+id/buildingTown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/building_town"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <!-- building lot -->

            <linearLayout>

                <EditText
                    android:id="@+id/buildingGush"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView341"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/building_gush"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/buildingLot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView342"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/building_lot"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/buildingSubLot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView343"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/building_sub_lot"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </linearLayout>
        </TableLayout>
    </LinearLayout>

</ScrollView>