<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- title -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="70sp" />

    <!-- short explanation -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:text="@string/breif"
        android:textSize="30sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="30sp"
        android:gravity="left"
        android:text="@string/details"
        android:textSize="30sp" />

<!--     detail of building, input -->

    <TableLayout
        android:id="@+id/buildingDetailTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp" 
        android:layout_marginRight="50sp" 
        android:layout_marginTop="10sp" 
        android:layout_marginBottom="50sp" 
        android:stretchColumns="0"
        >
        
        <TableRow>

            <Spinner
                android:id="@+id/survey_id_S"
                android:layout_width="400sp"
                android:layout_height="wrap_content"
                android:inputType="date" >

                <requestFocus />
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:gravity="left"
                android:text="@string/survay_id_l"
                android:textSize="30sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="400sp"
                android:layout_height="wrap_content" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:gravity="left"
                android:text="@string/street_address"
                android:textSize="30sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="400sp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:gravity="left"
                android:text="@string/date"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10sp" >

        <ImageButton
            android:id="@+id/hadashB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:src="@drawable/new_building" />

        <ImageButton
            android:id="@+id/kayamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:src="@drawable/old_building" />
    </LinearLayout>

</LinearLayout>