<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- <merge -->
    <!-- xmlns:android="http://schemas.android.com/apk/res/android" -->
    <!-- > -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.34" >
<!-- android:layout_alignBottom="@+id/texts" -->
        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <!-- <ImageButton -->
            <!-- android:id="@+id/takin" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_alignParentLeft="true" -->
            <!-- android:layout_alignParentTop="true" -->
            <!-- android:src="@drawable/takin_button" /> -->

<!--             <Spinner -->
            <ImageView
                android:id="@+id/takin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" 
                android:src="@drawable/takin_button"
                />

            <ImageButton
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/takin"
                android:src="@drawable/photo_button" />

            <ImageButton
                android:id="@+id/measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/takin"
                android:layout_toRightOf="@id/photo"
                android:src="@drawable/mesure_button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/buttons" >

            <Button
                android:id="@+id/more_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/question_mark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/short_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/more_info"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/more_info"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/fix_1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/fix_1"
                android:layout_alignParentRight="true"
                android:layout_below="@id/short_text"
                android:text="@string/fix_a"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@id/fix_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/short_text"
                android:layout_toLeftOf="@id/fix_1_label" />

            <TextView
                android:id="@+id/fix_2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/fix_2"
                android:layout_alignLeft="@id/fix_1_label"
                android:layout_alignParentRight="true"
                android:layout_below="@id/fix_1_label"
                android:text="@string/fix_b"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@id/fix_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/fix_1"
                android:layout_toLeftOf="@id/fix_2_label" />

            <TextView
                android:id="@+id/comments_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/comments_field"
                android:layout_alignLeft="@id/fix_1_label"
                android:layout_alignParentRight="true"
                android:layout_below="@id/fix_2_label"
                android:text="@string/comments"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@id/comments_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/fix_2"
                android:layout_marginLeft="24dp"
                android:layout_toLeftOf="@id/comments_label"
                android:ems="10" >
            </EditText>
        </RelativeLayout>

        <TextView
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/texts"
            android:background="#F0F0F0F0"
            android:text="" />
    </RelativeLayout>

</LinearLayout><!-- </merge> -->
